# Seraphim

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  seraphim.spec
configs/seraphim/: config.yaml
scripts/: build.ps1
seraphim-ui/: .gitignore  package-lock.json  package.json
seraphim-ui/src/: App.tsx  styles.css
seraphim-ui/src-tauri/: Cargo.toml  tauri.conf.json
seraphim-ui/src-tauri/capabilities/: default.json
seraphim-ui/src-tauri/icons/: icon.icns
seraphim-ui/src-tauri/src/: lib.rs  main.rs
seraphim-ui/src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  OrbScreen.tsx  Sidebar.tsx  SkillCatalogPanel.tsx  SphereGL.tsx  StatusBar.tsx  TitleBar.tsx  VoiceButton.tsx
seraphim-ui/src/hooks/: useConversation.ts  useSeraphimBackend.ts  useSpeech.ts  useTheme.ts  useVoice.ts
seraphim-ui/src/styles/: global.css
seraphim-ui/src/types/: index.ts
src/: test_engine.py
src/seraphim/: __init__.py  cli.py  settings.py
src/seraphim/agents/: base.py  core.py  learned_router.py  react.py  router.py  verification.py
src/seraphim/api/: app.py
src/seraphim/channels/: base.py  channel_cmd.py  daemon.py  handler.py  slack.py  telegram.py  webhook.py
src/seraphim/connectors/: __init__.py  connect_cmd.py  gcalendar.py  gmail.py  oauth.py
src/seraphim/digest/: builder.py  digest_cmd.py
src/seraphim/engine/: __init__.py  base.py  claude.py  llamacpp.py  metrics.py  ollama.py  openai_compat.py  vllm.py  vllm_cmd.py
src/seraphim/learning/: __init__.py  __main__.py  collector.py  daemon.py  distiller.py  evaluator.py  finetuner.py  grpo_trainer.py  learning_cmd.py  miner.py  optimizer.py  orchestrator.py  trace_store.py
src/seraphim/memory/: __init__.py  _stubs.py  bm25_backend.py  chunking.py  context.py  embeddings.py  faiss_backend.py  hybrid_backend.py  ingest.py  memory_cmd.py  sqlite_fts.py  store.py  user_facts.py
src/seraphim/monitor/: daemon.py  monitor_cmd.py  notifier.py  store.py
src/seraphim/operators/: __init__.py  (+2 more)
tests/: test_api.py  test_core.py  test_engine.py  test_memory.py  test_skills.py
voices/: app_aliases.json
(+50 files in other folders)
